@@ -1,5 +1,16 @@
 2015-11-05  Ola Jeppsson  <ola@adapteva.com>
 
+	* epiphany.c (epiphany_gie): Detect and handle GIE/IDLE instruction
+	pair as hardware = delay interrupts handling by one insn.
+	* mloop.in (full-exec-scache): If after handling OOB events emitted by
+	current instruction, there is still an event in the slot, delay
+	handling external register writes until after next insn.
+	* oob-events.h (oob_event_t): Add OOB_EVT_INTERRUPT_DELAYED.
+	* oob-events.c (epiphany_handle_oob_events): Handle
+	OOB_EVT_INTERRUPT_DELAYED.
+
+2015-11-05  Ola Jeppsson  <ola@adapteva.com>
+
 	* traps.c (epiphany_rti): If the core was idle because
 	of an 'idle' instruction, adjust return address to the next
 	instruction.
